Thu Oct  7 09:10:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
          Changed the way we get access to the ACE Reactor, we had some leaks

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
          Only set a listener to RTI DDS when it really is needed, doing
          a set_listener with a mask of 0 seems to result in a memory leak

Wed Oct  6 13:15:38 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/CIF/Component/CIF_Component_exec.cpp:
        * tests/CIF/Component/CIF_Component.idl:
        * tests/CIF/Component/CIF_Component_exec.h:
        * tests/Bug_2130_Regression/interfaces/ENW.mpc:
        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
        * tests/IDL_Test/Keywords/Keyword_Clash.idl:
        * tests/IDL_Test/Reused_Facet_Interface/Basic.idl:
        * tests/IDL_Test/Reused_Facet_Interface/CodeGen.idl:
        * tests/IDL_Test/Extension/Cornucopia.idl:
        * tests/IDL_Test/IDL3_Plus/KitchenSink.mpc:
        * tests/Thread/Sender/Sender_exec.cpp:
        * tests/Thread/Sender/Sender.idl:
        * tests/Thread/Sender/Sender_exec.h:
        * tests/Thread/Thread_Base/Thread_Base.idl:
        * tests/Thread/Receiver/Receiver_exec.cpp:
        * tests/Thread/Receiver/Receiver.idl:
        * tests/Thread/Receiver/Receiver_exec.h:
        * tests/DAnCE/Components/SimpleConsumer_exec.cpp:
        * tests/DAnCE/Components/SimpleCommon.idl: