@@ -1,3 +1,14 @@
+Thu Oct  7 11:05:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Deployment/Handlers/Connection_Handler.h:
+        * ciao/Deployment/Handlers/Connection_Handler.cpp:
+          Implemented disconnect for local facets, but found that DAnCE doesn't
+          do any disconnect for connections at this moment so this code is never
+          called
+
+        * tests/IDL3/Events/Abstract/Abstract.idl:
+          Fixed typo
+
 Thu Oct  7 09:10:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
